--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider &  gatsby build",
-    "develop": "set NODE_OPTIONS=--openssl-legacy-provider &  gatsby develop",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby build",
+    "develop": "export NODE_OPTIONS=--openssl-legacy-provider; gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
